have the actual test on partition vs compaction key